--- a/INPUT AND PRINT.ipynb
+++ b/INPUT AND PRINT.ipynb
@@ -515,29 +515,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "fc50106b-081e-4f2a-b3bb-2d53b3829973",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "d1a34e36-d39a-48e2-aa3a-6764607107f0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "NoneType"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mtype\u001b[39m(a)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
     }
    ],
    "source": [
@@ -638,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "d7df688c-87d4-400e-adc9-fcc1ceb69abd",
    "metadata": {},
    "outputs": [
@@ -652,14 +665,14 @@
     }
    ],
    "source": [
-    "print(50,60, 70, 80, end=\" \")\n",
+    "print(50,60,70,80, end=\" \")\n",
     "print(30)\n",
     "print(40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "4e7344c1-5780-4f4e-a2aa-d88226725dbe",
    "metadata": {},
    "outputs": [
@@ -673,14 +686,14 @@
     }
    ],
    "source": [
-    "print(50,60, 70, 80, end=\"*\")\n",
+    "print(50,60,70,80, end=\"*\")\n",
     "print(30)\n",
     "print(40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "5ebef2e2-53b1-4f28-9187-e3afb742d330",
    "metadata": {},
    "outputs": [
@@ -694,7 +707,7 @@
     }
    ],
    "source": [
-    "print(50,60, 70, 80, end=\" * \")\n",
+    "print(50,60,70,80, end=\" * \")\n",
     "print(30)\n",
     "print(40)"
    ]
