lists and tuples

--- a/If Elif Else.ipynb
+++ b/If Elif Else.ipynb
@@ -1428,9 +1428,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e13638d5-6ef0-4202-a032-28bab74b7afc",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f94f56-bea4-407a-9d3e-55b0ac387556",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "outputs": [],
    "source": [
     "## not"
    ]
