--- a/07 Dictionary .ipynb
+++ b/07 Dictionary .ipynb
@@ -802,16 +802,566 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "862f8d0c-523a-49ad-8f79-c3b163421d9f",
+   "execution_count": 2,
+   "id": "afe17024-ef89-4d5d-b8df-4043b1ef636f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = {\n",
+    "    \"info\": [12, 34.5, \"hello\", {\"key\": [1,2,3, \"world\"]}]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8a29e048-9cbb-4ff2-a9e5-cdbddcf874e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "01e4fbeb-5a05-4164-80d6-441948cff7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['info'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "720276d8-81a5-4c9f-9185-22643c6f70fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['info'][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "68c0624c-faf3-44bd-bc6e-f74726ebc1ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'world'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['info'][3]['key'][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4be0494c-2ea6-4fce-9428-f1625bbb84c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['info'][3]['key'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "813aa08f-53d6-4ccc-a9e6-50bf2bbe6c1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['info'][3]['key'][1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d769e027-57fb-4c1d-95bf-49291f9891be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested = {\"a\": [10, 20, {'b': \"python\"}],\n",
+    "          \"c\": {\"d\": [\"abc\", {\"e\": [1.1, 2.2, 3.3]}] }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "729408a1-4523-47e2-a954-7251e05b26fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested[\"a\"][2][\"b\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "af9c5e49-9c56-4a3b-8555-107257709450",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested[\"c\"][\"d\"][1][\"e\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e503c790-5ad4-4559-a371-7c521bc9c7a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ab'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested[\"c\"][\"d\"][0][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b9af8fd7-676e-428c-9c2a-fdcf40c63fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested[\"c\"][\"d\"][1][\"e\"][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d9a83d9e-1936-4be5-bb0b-87140d379695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complex_data = [{\"name\": \"Alice\", \n",
+    "                  \"scores\": [95, 88, {\"math\": 90, \"science\": [91.5, 92.0]}]},\n",
+    "\n",
+    "                {\"name\": \"bob\",\n",
+    "                \"scores\": [75, {\"math\": [80, 82]}, \"done\"]}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "3ef30ae8-4ded-4d50-975f-e8f0bee46ec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92.0"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex_data[0][\"scores\"][2][\"science\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "d57bbe81-8263-4f63-b32e-27bc1e6390e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex_data[1][\"scores\"][1][\"math\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "ff489108-9ff7-4ea6-898b-9e22b0e99cf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'done'"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex_data[1][\"scores\"][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "9bfb78cf-86ea-44c8-baa8-8cd99fd5313c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[95, 88]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex_data[0][\"scores\"][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "3ac9eba9-d2c0-478f-b3bf-7fac20c0fa66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure ={\n",
+    "    \"x\":[\n",
+    "        {\"y\": [100, 200, {\"z\": \"deep\"}]},\n",
+    "        {\"y\": [300, {\"z\": [\"not\", \"so\", \"deep\"]}]}\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "ea1c84b1-4635-4212-b63c-40e16a5de69f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'deep'"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "structure[\"x\"][0][\"y\"][2][\"z\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "id": "9d7122f4-6184-47b7-b9a3-c6e3325b7deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'so'"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "structure[\"x\"][1][\"y\"][0:2][1][\"z\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "id": "bda8e30f-0940-4e6b-86f8-51f80f2d3e29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['so', 'deep']"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "structure[\"x\"][1][\"y\"][0:2][1][\"z\"][1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "id": "a6be2b4a-5417-4757-a405-c1777477b0f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "structure[\"x\"][0][\"y\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "id": "24afdb32-4ed8-4525-945b-e5f98303a758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"alpha\": [\n",
+    "        {\n",
+    "            \"beta\": \"python\",\n",
+    "            \"gamma\": [123, 456.78, {\"delta\": [\"a\", \"b\", {\"epilson\": \"final\"}]}]\n",
+    "        },\n",
+    "       {\n",
+    "             \"beta\": \"jawascript\",\n",
+    "             \"gamma\": [999, 888.88]\n",
+    "    }\n",
+    "   ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "id": "e3623a09-a1d8-49b7-a296-1f637f2dcde8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"alpha\"][0][\"beta\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "id": "e8ad0401-9161-4d37-9538-53e7f134e1d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "456.78"
+      ]
+     },
+     "execution_count": 292,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"alpha\"][0][\"gamma\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "id": "6c7b7623-cc27-4157-9326-c0b3f22d2e78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'final'"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"alpha\"][0][\"gamma\"][2][\"delta\"][2][\"epilson\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "id": "e4bcd6c1-a45a-4ebd-bc01-4fbebb265050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'script'"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"alpha\"][1][\"beta\"][4:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "id": "145edf76-5f8b-4ca0-acd7-c270a107214c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 315,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"alpha\"][0][\"gamma\"][2][\"delta\"][1]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe17024-ef89-4d5d-b8df-4043b1ef636f",
+   "id": "a3433cd6-8417-4173-a6a5-1d8b18e6a46b",
    "metadata": {},
    "outputs": [],
    "source": []
