--- a/04 If Elif Else.ipynb
+++ b/04 If Elif Else.ipynb
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "a527560b-36ea-42b1-af7d-e0ae571e3fc5",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "8f944173-e19c-4c9c-95c3-208530e1999b",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "5ccb0b6f-605e-487f-ad68-3778674354a9",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
     "        print(\"bahr milo tum\")\n",
     "elif city == \"chd\":\n",
     "    if age > 50:\n",
-    "        print(\"welcome to city of reirement\")\n",
+    "        print(\"welcome to city of retirement\")\n",
     "    else:\n",
     "        print(\"welcome to chd\")\n",
     "elif city == \"agra\":\n",
