--- a/09 While Loop .ipynb
+++ b/09 While Loop .ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c49d34b1-63ae-4471-a861-da897619af40",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "533eab4f-a42b-4451-b4a3-04f0949c79f6",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "6a399ad3-8e15-42be-8e6f-ecd4cfd77336",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "646cc5cf-14e7-40d1-b460-739ef139156a",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "475fb104-b3cc-47b0-8816-071bd5638014",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "99ba83c3-46cb-4c7e-b092-759e84f602c3",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "3585298a-64c1-4f70-a88b-180347b0ec59",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "d142cd7c-1420-4b05-9816-a98802400e55",
    "metadata": {},
    "outputs": [
@@ -317,13 +317,13 @@
     "while i <n:\n",
     "    a += i\n",
     "    print(i, a)\n",
-    "    i +=1\n",
+    "    i += 1\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "845fb9c8-f9e7-42ab-b3af-f7a8d9402761",
    "metadata": {},
    "outputs": [
@@ -332,23 +332,27 @@
      "output_type": "stream",
      "text": [
       "1 2\n",
-      "2 4\n"
+      "2 4\n",
+      "3 7\n",
+      "4 11\n",
+      "11\n"
      ]
     }
    ],
    "source": [
     "a = 1\n",
     "i = 1\n",
-    "n = 3\n",
+    "n = 5\n",
     "while i < n:\n",
     "    a += i\n",
     "    print(i, a)\n",
-    "    i += 1"
+    "    i += 1\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "3a282b28-b243-4bdd-a9ec-2ab5a3f1cfdc",
    "metadata": {},
    "outputs": [
@@ -425,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "801873ac-7db7-4ffb-8024-539b97d5499d",
    "metadata": {},
    "outputs": [
@@ -454,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "170db84d-61bf-4f9a-bc71-5d771d85783c",
    "metadata": {},
    "outputs": [
@@ -479,8 +483,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "1085c31a-3097-4d7f-b087-cb351a8c6b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [10, 89, 9, 56, 4, 80, 8]\n",
+    "max_element = a[0]\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    if a[i] > max_element:\n",
+    "        max_element = a[i]\n",
+    "print(max_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a21e907d-79c9-4ec8-aa45-9109ca884802",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [50, 20, 34, 45, 68, 12 ,29]\n",
+    "max_element = s[0]\n",
+    "\n",
+    "for i in range(len(s)):\n",
+    "    if s[i] > max_element:\n",
+    "        max_element = s[i]\n",
+    "print(max_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "148b396c-9f8d-46eb-8ea3-38566057de42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = [12, 15, 38, 99, 45, 38, 20, 78, 50]\n",
+    "max_element = h[0]\n",
+    "\n",
+    "for i in range(len(h)):\n",
+    "    if h[i] > max_element:\n",
+    "        max_element = h[i]\n",
+    "print(max_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "745cd1cd-eb7d-4f26-9c0e-5c1bbb71073a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [12, 56, 78, 90, 45, 8]\n",
+    "print(max(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "a89e248b-500f-4855-bc2c-a880614574c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = [13, 17, 38, 39, 26]\n",
+    "e.sort()\n",
+    "print(e[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "af897625-a171-4924-aab7-f50c3480dbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = [14, 87, 46, 2, 1, 67]\n",
+    "min_element = h[0]\n",
+    "\n",
+    "for i in range(len(h)):\n",
+    "    if h[i] < min_element:\n",
+    "        min_element = h[i]\n",
+    "print(min_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e5599d44-e57b-4095-8ae0-a4235acdb15c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [56, 93, 34, 21, 9, 3, 45, 72, 94]\n",
+    "a.sort()\n",
+    "print(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "5cf9fd94-1527-4b21-8c25-4c1f567526b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [11, 3, 33, 90, 75, 24]\n",
+    "print(min(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "0586b137-e5d0-4862-bd91-e7e20048671b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [11, 3, 33, 90, 75, 24]\n",
+    "min_element = a[0]\n",
+    "max_element = a[0]\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    if a[i] < min_element:\n",
+    "        min_element = a[i]\n",
+    "        \n",
+    "    if a[i] > max_element:\n",
+    "        max_element = a[i]\n",
+    "print(min_element)\n",
+    "print(max_element)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "4b000cf4-e1ed-4fac-a865-5879581faacb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [11, 3, 33, 90, 75, 24]\n",
+    "a.sort()\n",
+    "print(a[0])\n",
+    "print(a[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "a643de0a-2a62-46b9-bb92-c778718a7265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [11, 3, 33, 90, 75, 24]\n",
+    "print(min(a))\n",
+    "print(max(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "99df4c4b-e190-4a6d-8d50-08e1889300cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "arr = [10, 5, 3, 8, 12]\n",
+    "first = math.inf\n",
+    "second = math.inf\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    if arr[i] < first:\n",
+    "        first = arr[i]\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    if arr[i] != first and arr[i] < second:\n",
+    "        second = arr[i]\n",
+    "print(second)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "fd96c442-a368-4ba4-bd92-a440a24162be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [10, 5, 3, 8, 12]\n",
+    "arr.sort()\n",
+    "print(arr[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "754e423c-466a-4f8b-832a-aa88d7b8314f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "266\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [82, 24, 73, 52, 13, 22]\n",
+    "sum = 0\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    sum = sum + a[i]\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "7db2a536-8594-4173-add8-2e19d64e58ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[28, 27, 26, 25, 24, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverselist(A):\n",
+    "    print(A[::-1])\n",
+    "\n",
+    "A = [23, 24, 25, 26, 27, 28]\n",
+    "reverselist(A)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "c2a412c3-29ea-4c50-84b8-fc827aaa0b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[28, 27, 26, 25, 24, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [23, 24, 25, 26, 27, 28]\n",
+    "reversed_arr = arr[::-1]\n",
+    "\n",
+    "print(reversed_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "2799ba3c-f898-4d9f-83b5-a69260ed3dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 30, 20, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverseList(A, start, end):\n",
+    "  while start < end:\n",
+    "    A[start], A[end] = A[end], A[start]\n",
+    "    start += 1\n",
+    "    end -= 1\n",
+    "\n",
+    "A = [10, 20, 30, 40, 50]\n",
+    "reverseList(A, 0, 4)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "37ec9da0-92e7-4bee-a757-69b01ea88ae3",
+   "id": "6eec62d6-9189-4a5c-a387-858c597c477c",
    "metadata": {},
    "outputs": [],
    "source": []
