--- a/10 loop questions.ipynb
+++ b/10 loop questions.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "a2abd2f0-fd0d-4b6b-9c5f-5e4374bc6799",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "aed3213a-8668-43b3-bdee-65d773492388",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "7"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "234603bb-33f6-49ba-a512-b7ee66502e46",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "id": "bda801f0-48c1-48f8-83fc-589efbf6866e",
    "metadata": {},
    "outputs": [
@@ -564,18 +564,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n"
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
      ]
     }
    ],
    "source": [
     "i = 1\n",
     "while i <= 10:\n",
-    "    if(i%2!= 0):\n",
+    "    if(i % 2 == 0):\n",
     "        i += 1\n",
     "        continue\n",
     "    print(i)\n",
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "56012316-fb07-436b-83d9-bddbfa4eb57e",
    "metadata": {},
    "outputs": [
@@ -617,44 +617,12 @@
     "\n",
     "print(l)\n",
     "if len(l)==2:\n",
-    "    print(n, 'is a prime number')"
+    "    print(n, 'is a prime number')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "191b1b29-cc5f-4710-b40f-77c501ea6dfd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 9\n"
-     ]
-    }
-   ],
-   "source": [
-    "a =[2, 5, 6, 9, 4, 3, 7, 10, 8]\n",
-    "l = a[0]\n",
-    "s = a[0]\n",
-    "i = 0\n",
-    "n = len(a)\n",
-    "while i < len(a):\n",
-    "    #print(i)\n",
-    "    if a[i] > l:\n",
-    "        s = l\n",
-    "        l = a[i]\n",
-    "    elif a[i] > s:\n",
-    "        s = a[i]\n",
-    "    \n",
-    "    i += 1\n",
-    "print(l, s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "id": "9a02f473-ebe2-4f94-b80b-b0a29be02541",
    "metadata": {},
    "outputs": [
@@ -688,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "c1c1485f-64e5-4ddf-a8aa-101b4b92798b",
    "metadata": {},
    "outputs": [
@@ -735,8 +703,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "fb9acb53-a8bb-4354-891b-0f9e9f1a574c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 % 1 = 18.0\n",
+      "18 % 2 = 9.0\n",
+      "18 % 3 = 6.0\n",
+      "18 % 6 = 3.0\n",
+      "18 % 9 = 2.0\n",
+      "18 % 18 = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "n = 18\n",
+    "while i <= n:\n",
+    "    if n % i == 0:\n",
+    "        print(n, \"%\", i, \"=\", n/i)\n",
+    " \n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c546cf8e-c00b-4eee-bbd8-5d077d9ad623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48 % 1 = 48.0\n",
+      "48 % 2 = 24.0\n",
+      "48 % 3 = 16.0\n",
+      "48 % 4 = 12.0\n",
+      "48 % 6 = 8.0\n",
+      "48 % 8 = 6.0\n",
+      "48 % 12 = 4.0\n",
+      "48 % 16 = 3.0\n",
+      "48 % 24 = 2.0\n",
+      "48 % 48 = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "n = 48\n",
+    "while i <= n:\n",
+    "    if n % i == 0:\n",
+    "        print(n, \"%\", i, \"=\", n/i)\n",
+    " \n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e3459dd1-63c3-4aff-9f95-0437a7ab6326",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  1  1  1  1  1  \n",
+      "2  2  2  2  2  2  \n",
+      "3  3  3  3  3  3  \n",
+      "4  4  4  4  4  4  \n",
+      "5  5  5  5  5  5  \n",
+      "6  6  6  6  6  6  \n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "n = 7\n",
+    "while i < n:\n",
+    "    j = 1\n",
+    "    m = 7\n",
+    "    while j < m:\n",
+    "        print(i, end= \"  \")\n",
+    "        j += 1\n",
+    "    print()\n",
+    "    i += 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "d5450cbf-4ccf-4594-85fa-f7a13823d11e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,5,6,9,4,3,7,10,8]\n",
+    "l = a[0]\n",
+    "s = a[0]\n",
+    "i = 0\n",
+    "n =len(a)\n",
+    "while i < n:\n",
+    "    #print(i)\n",
+    "    if a[i] > l:\n",
+    "        s = l\n",
+    "        l = a[i]\n",
+    "    elif a[i] > s:\n",
+    "        s = a[i]\n",
+    "    i+=1\n",
+    "print(l,s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb168a91-2880-451c-9114-ffa807615d7a",
    "metadata": {},
    "outputs": [],
    "source": []
