--- a/12 Json .ipynb
+++ b/12 Json .ipynb
@@ -43,7 +43,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "9698770d-5995-479c-be21-67d113fc0d62",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1403,8 +1405,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "fa6c2e5d-0de7-4c54-b762-057dfd27f092",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "84637cb3-3f2f-4640-ade0-987b249fd1cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(data\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data = json.loads(data.decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c93c6c99-77fc-40d5-8180-da833bf751de",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m res\u001b[38;5;241m.\u001b[39mstatus\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "res.status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "db6731e6-8a58-44ab-ba43-357385c29acc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(res\u001b[38;5;241m.\u001b[39mheaders)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "902918ee-2459-4416-9954-6ab88955cdc8",
+   "id": "fad09dae-70b4-454c-b929-23c555d471d1",
    "metadata": {},
    "outputs": [],
    "source": []
