--- a/11 Patterns .ipynb
+++ b/11 Patterns .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "fe653b94-9064-4171-b935-32c0b225ea5f",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "id": "eccb9567-95dc-4a3d-b7e9-8f6d0c3f4b79",
    "metadata": {},
    "outputs": [
@@ -42,21 +42,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 \n",
-      "1 1 \n",
-      "2 2 2 \n",
-      "3 3 3 3 \n",
-      "4 4 4 4 4 \n"
+      "\n",
+      "1 \n",
+      "2 2 \n",
+      "3 3 3 \n",
+      "4 4 4 4 \n",
+      "5 5 5 5 5 \n"
      ]
     }
    ],
    "source": [
     "i = 0\n",
     "n = 5\n",
-    "while i < n:\n",
+    "while i <= n:\n",
     "    j = 0\n",
     "    m = 5\n",
-    "    while j < i+1:\n",
+    "    while j < i:\n",
     "        print(i, end= \" \")\n",
     "        j += 1\n",
     "    print()\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "id": "52bf7a28-ff83-467c-884d-a6b5a902b7e6",
    "metadata": {},
    "outputs": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "f58cd97d-2406-4b4c-924d-bc64772c7184",
    "metadata": {},
    "outputs": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "id": "4a253bf2-cefa-4b1f-b895-882b295ef192",
    "metadata": {},
    "outputs": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "6927ee53-71eb-41ac-b316-0a735a30103b",
    "metadata": {},
    "outputs": [
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "id": "90b51e0f-2c4c-4083-aa42-c8ced29dc182",
    "metadata": {},
    "outputs": [
@@ -243,18 +244,20 @@
       "    *\n",
       "   ***\n",
       "  *****\n",
-      " *******\n"
+      " *******\n",
+      "*********\n"
      ]
     }
    ],
    "source": [
     "i=0\n",
     "n=5\n",
-    "while i<n:\n",
+    "while i<= n:\n",
     "    k=0\n",
     "    while k < n-i:\n",
     "        print(\" \",end=\"\")\n",
     "        k+=1\n",
+    "    \n",
     "    j=0\n",
     "    while j < i*2-1:\n",
     "        print(\"*\",end=\"\")\n",
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "5ec205b6-96bf-490c-b346-0b4b6bfabe7a",
    "metadata": {},
    "outputs": [
@@ -292,7 +295,7 @@
     "        k += 1\n",
     "    \n",
     "    j = 0\n",
-    "    while j < 2 * (n - i) - 1:\n",
+    "    while j < (n - i)* 2- 1:\n",
     "        print(\"*\", end=\"\")\n",
     "        j += 1\n",
     "    \n",
@@ -302,8 +305,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "8ccf946e-f569-4258-8dd6-53c116a0011c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "     *********\n",
+      "    *******\n",
+      "   *****\n",
+      "  ***\n",
+      " *\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "n = 5\n",
+    "while i < n:\n",
+    "    j = 0\n",
+    "    while j < n-i:\n",
+    "        print(\" \", end= \"\")\n",
+    "        j += 1\n",
+    "\n",
+    "    k = 0\n",
+    "    while k <((i + 1)*2)-1:\n",
+    "        print(\"*\", end= \"\")\n",
+    "        k += 1\n",
+    "    \n",
+    "        \n",
+    "    print()\n",
+    "    i += 1\n",
+    "\n",
+    "i = 0\n",
+    "n = 5\n",
+    "while i < n:\n",
+    "    j = 0\n",
+    "    while j < n-i:\n",
+    "        print(\" \", end= \"\")\n",
+    "        j += 1\n",
+    "\n",
+    "    k = 0\n",
+    "    while k <(n-i)*2-1:\n",
+    "        print(\"*\", end= \"\")\n",
+    "        k += 1\n",
+    "    \n",
+    "        \n",
+    "    print()\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "91332ea2-00da-4f6e-9a19-80033c505603",
+   "id": "9817fef6-6958-4779-923b-3a26179de87b",
    "metadata": {},
    "outputs": [],
    "source": []
